<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.deepanshu.project0.MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:id="@+id/nano_degree_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/nano_degree" />

    <Button
        android:id="@+id/popular_movies"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/nano_degree_text"
        android:layout_alignStart="@id/nano_degree_text"
        android:layout_alignEnd="@id/nano_degree_text"
        android:layout_marginTop="10dp"
        android:background="#2E3D49"
        android:textColor="#FFFFFF"
        android:text="@string/popular_movies" />

    <Button
        android:id="@+id/stock_hawk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/popular_movies"
        android:layout_alignStart="@id/nano_degree_text"
        android:layout_alignEnd="@id/nano_degree_text"
        android:layout_marginTop="10dp"
        android:background="#2E3D49"
        android:textColor="#FFFFFF"
        android:text="@string/stock_hawk" />

    <Button
        android:id="@+id/build_it_bigger"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/stock_hawk"
        android:layout_alignStart="@id/nano_degree_text"
        android:layout_alignEnd="@id/nano_degree_text"
        android:layout_marginTop="10dp"
        android:background="#2E3D49"
        android:textColor="#FFFFFF"
        android:text="@string/build_it_bigger" />

    <Button
        android:id="@+id/make_your_app_material"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/build_it_bigger"
        android:layout_alignStart="@id/nano_degree_text"
        android:layout_alignEnd="@id/nano_degree_text"
        android:layout_marginTop="10dp"
        android:background="#2E3D49"
        android:textColor="#FFFFFF"
        android:text="@string/make_your_app_material" />

    <Button
        android:id="@+id/go_ubiquitous"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/make_your_app_material"
        android:layout_alignStart="@id/nano_degree_text"
        android:layout_alignEnd="@id/nano_degree_text"
        android:layout_marginTop="10dp"
        android:background="#2E3D49"
        android:textColor="#FFFFFF"
        android:text="@string/go_ubiquitous" />

    <Button
        android:id="@+id/capstone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/go_ubiquitous"
        android:layout_alignStart="@id/nano_degree_text"
        android:layout_alignEnd="@id/nano_degree_text"
        android:layout_marginTop="10dp"
        android:background="#2E3D49"
        android:textColor="#FFFFFF"
        android:text="@string/capstone" />

</RelativeLayout>
